auth-service/k8/k8.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: auth-service-deployment
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: registry.cloud.sdu.dk/sdu-cloud/auth-service:1.23.0
        command:
        - /opt/service/bin/service
        - --config-dir
        - /etc/psql
        - --config-dir
        - /etc/auth-config
        - --config-dir
        - /etc/refresh-token
        - --config-dir
        - /etc/token-validation
        - --config-dir
        - /etc/wayf-config

        volumeMounts:
        - mountPath: /etc/psql
          name: psql-secrets
        - mountPath: /etc/auth-certs
          name: cert-secrets
        - mountPath: /etc/auth-config
          name: config
        - mountPath: /etc/refresh-token
          name: refresh-token
        - mountPath: /etc/token-validation
          name: token-validation
        - mountPath: /etc/wayf-certs
          name: auth-wayf
        - mountPath: /etc/wayf-config
          name: auth-wayf-config

      volumes:
      - name: psql-secrets
        secret:
          defaultMode: 420
          optional: false
          secretName: auth-psql
      - name: cert-secrets
        secret:
          defaultMode: 420
          optional: false
          secretName: auth-certs
      - configMap:
          defaultMode: 420
          name: auth-config
        name: config
      - name: refresh-token
        secret:
          defaultMode: 420
          secretName: auth-refresh-token
      - configMap:
          defaultMode: 420
          name: token-validation
        name: token-validation
      - name: auth-wayf
        secret:
          defaultMode: 420
          secretName: auth-wayf
      - name: auth-wayf-config
        secret:
          defaultMode: 420
          secretName: auth-wayf-config
      
      imagePullSecrets:
        - name: esci-docker
