auth-service/k8/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v1
      kind: Mapping
      name: auth
      prefix: ^/auth(/.*)?$
      prefix_regex: true
      service: auth:8080
      rewrite: ""

      ---
      apiVersion: ambassador/v1
      kind: Mapping
      name: sla
      prefix: ^/api/sla(/.*)?$
      prefix_regex: true
      service: auth:8080
      rewrite: ""

spec:
  clusterIP: None
  type: ClusterIP
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: auth-service
