auth-service/k8/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: ""
spec:
  rules:
  - host: cloud.sdu.dk
    http:
      paths:
      - path: /auth
        backend:
          serviceName: auth
          servicePort: 8080
